# rusmes

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  FUZZING.md  LICENSE  README.md  TESTING.md  TODO.md  docker-compose.yml  libsieve_parser.rlib  prometheus.yml  rusmes.md  rusmes.service  rusmes.toml
crates/rusmes-acme/: Cargo.toml  README.md  TODO.md
crates/rusmes-acme/src/: cert.rs  challenge.rs  client.rs  config.rs  dns01.rs  http01.rs  jwk.rs  lib.rs  renewal.rs  storage.rs
crates/rusmes-acme/tests/: integration_tests.rs
crates/rusmes-auth/: Cargo.toml  README.md  SASL_INTEGRATION.md  SECURITY_FEATURES.md  TODO.md
crates/rusmes-auth/examples/: oauth2_integration.rs  sasl_integration.rs  security_integration.rs
crates/rusmes-auth/src/: file.rs  lib.rs  sasl.rs  security.rs
crates/rusmes-auth/src/backends/: ldap.rs  mod.rs  oauth2.rs  pam.rs  sql.rs  system.rs
crates/rusmes-auth/tests/: auth_tests.rs
crates/rusmes-benches/: Cargo.toml
crates/rusmes-benches/benches/: BENCHMARK_SUMMARY.md  README.md  RESULTS.md  auth.rs  concurrent_connections.rs  connections.rs  mailet_pipeline.rs  mailets.rs  parsing.rs  search.rs  search_performance.rs  storage.rs  throughput.rs  throughput_benchmark.rs
crates/rusmes-cli/: Cargo.toml  README.md  TODO.md
crates/rusmes-cli/src/: cli_def.rs  client.rs  lib.rs  main.rs
crates/rusmes-cli/src/commands/: backup.rs  check_config.rs  completions.rs  init.rs  mailbox.rs  man.rs  migrate.rs  mod.rs  queue.rs  restore.rs  status.rs  user.rs  watch.rs
crates/rusmes-config/: Cargo.toml  README.md  TODO.md
crates/rusmes-config/src/: env_overrides.rs  lib.rs  listeners.rs  logging.rs  parse.rs  performance.rs  runtime.rs  tls.rs  unknown_keys.rs  validation.rs
crates/rusmes-config/tests/: config_basic.rs  performance_config.rs  tls_config.rs  unknown_keys.rs
crates/rusmes-core/: Cargo.toml  README.md  TODO.md
crates/rusmes-core/src/: bounce.rs  dsn.rs  factory.rs  lib.rs  mailet.rs  matcher.rs  processor.rs  queue.rs  rate_limit.rs  router.rs  transport.rs
crates/rusmes-core/src/mailets/: add_header.rs  bounce.rs  dkim_verify.rs  dmarc_verify.rs  dnsbl.rs  forward.rs  greylist.rs  legalis.rs  local_delivery.rs  mod.rs  oxify.rs  remote_delivery.rs  remove_mime_header.rs  sieve.rs  spam_assassin.rs  spf_check.rs  virus_scan.rs
crates/rusmes-core/src/matchers/: composite.rs  has_attachment.rs  header_contains.rs  is_in_blacklist.rs  is_in_whitelist.rs  mod.rs  recipient_is_local.rs  remote_address.rs  sender_is.rs  size_greater_than.rs
crates/rusmes-core/src/queue/: core.rs  priority.rs
crates/rusmes-core/src/sieve/: interpreter.rs  mod.rs  parser.rs
crates/rusmes-core/tests/: mailet_tests.rs
crates/rusmes-imap/: Cargo.toml  README.md  TODO.md
crates/rusmes-imap/src/: authenticate.rs  command.rs  condstore.rs  config.rs  handler.rs  handler_auth.rs  handler_mailbox.rs  handler_message.rs  lib.rs  mailbox_registry.rs  mailbox_watcher.rs  parser.rs  qresync.rs  response.rs  server.rs  session.rs  special_use.rs
crates/rusmes-imap/tests/: compress_deflate_e2e.rs
crates/rusmes-jmap/: Cargo.toml  README.md  TODO.md
crates/rusmes-jmap/src/: api.rs  auth.rs  back_reference.rs  blob.rs  eventsource.rs  lib.rs  session.rs  types.rs  web_push.rs
crates/rusmes-jmap/src/methods/: email.rs  email_advanced.rs  email_query_helpers.rs  identity.rs  mod.rs  push_subscription.rs  search_snippet.rs  submission.rs  thread.rs  vacation.rs
crates/rusmes-jmap/tests/: blob_eventsource_tests.rs  email_set_ops.rs  jmap_auth.rs  jmap_method_account_binding.rs  push_subscription_tests.rs
crates/rusmes-loadtest/: Cargo.toml  README.md
crates/rusmes-loadtest/src/: config.rs  generators.rs  lib.rs  main.rs  metrics.rs  reporter.rs  scenarios.rs  workload.rs
crates/rusmes-loadtest/src/protocols/: imap.rs  jmap.rs  mod.rs  pop3.rs  smtp.rs
crates/rusmes-loadtest/tests/: loadtest_tests.rs
crates/rusmes-metrics/: Cargo.toml  README.md  TODO.md
crates/rusmes-metrics/src/: lib.rs  tracing.rs
crates/rusmes-pop3/: Cargo.toml  README.md  TODO.md
crates/rusmes-pop3/src/: command.rs  lib.rs  maildrop_lock.rs  parser.rs  response.rs  server.rs  session.rs
crates/rusmes-pop3/tests/: sasl_and_locking.rs
crates/rusmes-proto/: Cargo.toml  README.md  TODO.md
crates/rusmes-proto/src/: address.rs  error.rs  lib.rs  mail.rs  message.rs  mime.rs
crates/rusmes-search/: Cargo.toml  README.md  TODO.md
crates/rusmes-search/src/: cache.rs  lib.rs  query_translator.rs
crates/rusmes-search/tests/: cluster9.rs
crates/rusmes-server/: Cargo.toml  README.md  TODO.md
crates/rusmes-server/src/: bootstrap.rs  cli.rs  connection_limits.rs  lib.rs  main.rs  privileges.rs  session_logging.rs  session_logging_integration.md
crates/rusmes-server/tests/: check_config.rs
crates/rusmes-smtp/: Cargo.toml  README.md  TODO.md
crates/rusmes-smtp/src/: auth.rs  bdat.rs  command.rs  dsn.rs  lib.rs  outbound_pool.rs  parser.rs  response.rs  server.rs  session.rs  submission.rs  transport.rs
crates/rusmes-smtp/tests/: protocol_tests.rs
crates/rusmes-storage/: Cargo.toml  README.md  TODO.md
crates/rusmes-storage/migrations/: 0001_initial.sql
crates/rusmes-storage/src/: backup.rs  lib.rs  metrics.rs  modseq.rs  traits.rs  types.rs
crates/rusmes-tests/: Cargo.toml
crates/rusmes-tests/src/: lib.rs
crates/rusmes-tests/tests/: authentication.rs  failover.rs  jmap_rfc8620.rs  migration.rs  mime_rfc2045.rs  pop3_rfc1939.rs
fuzz/: Cargo.toml  README.md  imap.dict  run_all_fuzz_tests.sh  sieve.dict  smtp.dict  verify_setup.sh
fuzz/corpus/fuzz_email_address/: with_dots
fuzz/corpus/fuzz_imap_parser/: fetch  literal  login  select
fuzz/corpus/fuzz_jmap_json/: email_get  simple_request
fuzz/corpus/fuzz_mime_parser/: base64  multipart  simple_header
fuzz/corpus/fuzz_sieve_parser/: fileinto  if_header
fuzz/corpus/fuzz_smtp_parser/: bdat  ehlo  helo  mail_from  mail_with_params  rcpt_to
fuzz/fuzz_targets/: fuzz_email_address.rs  fuzz_imap_parser.rs  fuzz_jmap_json.rs  fuzz_mime_parser.rs  fuzz_sieve_parser.rs  fuzz_smtp_parser.rs
(+138 files in other folders)
