[workspace]
members = [
    "crates/rusmes-proto",
    "crates/rusmes-core",
    "crates/rusmes-storage",
    "crates/rusmes-smtp",
    "crates/rusmes-imap",
    "crates/rusmes-jmap",
    "crates/rusmes-pop3",
    "crates/rusmes-auth",
    "crates/rusmes-search",
    "crates/rusmes-metrics",
    "crates/rusmes-config",
    "crates/rusmes-cli",
    "crates/rusmes-server",
    "crates/rusmes-loadtest",
    "crates/rusmes-acme",
    "crates/rusmes-tests",
    "crates/rusmes-benches",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.75"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.49", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
serde_yaml = "0.9"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Parsing
nom = "8.0"
mail-parser = "0.11"

# Networking
rustls = "0.23"
tokio-rustls = "0.26"

# Storage
sqlx = { version = "0.8", features = ["postgres", "mysql", "sqlite", "runtime-tokio-rustls", "uuid", "any"] }
sled = "0.34"

# Search
tantivy = "0.22"

# Metrics
prometheus = "0.14"
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic", "http-proto", "trace"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-opentelemetry = "0.32"

# HTTP (for JMAP)
axum = "0.8"
hyper = "1.8"

# UUID
uuid = { version = "1.20", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Bytes
bytes = "1.11"

# Password hashing
bcrypt = "0.18"
base64 = "0.22"

# System info
hostname = "0.4"

# Testing
mockall = "0.13"
wiremock = "0.6"
tempfile = "3.25"
proptest = "1.8"
quickcheck = "1.0"
reqwest = { version = "0.13", features = ["json", "form", "rustls"], default-features = false }
rand = "0.9"

# ACME / TLS certificate provisioning
instant-acme = { version = "0.8", default-features = false, features = ["ring", "hyper-rustls"] }
rcgen = { version = "0.14", default-features = false, features = ["ring"] }
pem-rfc7468 = { version = "0.7", features = ["std"] }

# Async I/O utilities
tokio-util = { version = "0.7", features = ["io"] }

# Cryptography
pbkdf2 = { version = "0.12", features = ["simple"] }
getrandom = "0.3"
sha2 = "0.10"
md-5 = "0.10"
hmac = "0.12"
hex = "0.4"
rsa = { version = "0.9", features = ["sha2"] }
ed25519-dalek = "2.1"
aes-gcm = "0.10"

# Auth / identity
pam = "0.7"
ldap3 = "0.12"
argon2 = "0.5"
oauth2 = "5.0"
jsonwebtoken = "9.3"
libc = "0.2"

# Network
ipnetwork = "0.21"
hickory-resolver = { version = "0.25", features = ["tokio"] }

# Async / streaming
futures = "0.3"
async-stream = "0.3"
tokio-test = "0.4"

# Compression / archiving
flate2 = "1.1"
zstd = "0.13"
tar = "0.4"

# CLI
clap_complete = "4.5"
indicatif = "0.18"
colored = "2.2"
interprocess = "2.4"
tabled = "0.20"

# TUI
ratatui = "0.29"
crossterm = "0.29"

# Certificate / X.509
x509-parser = "0.18"

# Cloud
aws-sdk-s3 = "1.29"
aws-config = "1.8"

# Filesystem
walkdir = "2.5"

# Logging
tracing-appender = "0.2"

# Benchmarking
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }

# Load testing
clap = { version = "4.5", features = ["derive", "env"] }
hdrhistogram = "7.5"

