[workspace]
members = [
    "crates/rusmes-proto",
    "crates/rusmes-core",
    "crates/rusmes-storage",
    "crates/rusmes-smtp",
    "crates/rusmes-imap",
    "crates/rusmes-jmap",
    "crates/rusmes-pop3",
    "crates/rusmes-auth",
    "crates/rusmes-search",
    "crates/rusmes-metrics",
    "crates/rusmes-config",
    "crates/rusmes-cli",
    "crates/rusmes-server",
    "crates/rusmes-loadtest",
    "crates/rusmes-acme",
    "crates/rusmes-tests",
    "crates/rusmes-benches",
]
resolver = "2"

[workspace.package]
version = "0.1.2"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.75"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.50", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.1"
serde_yaml = "0.9"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Parsing
nom = "8.0"
mail-parser = "0.11"

# Networking
rustls = { version = "0.23", features = ["ring"] }
tokio-rustls = "0.26"

# Storage
sqlx = { version = "0.8", features = ["postgres", "mysql", "sqlite", "runtime-tokio-rustls", "uuid", "any", "migrate"] }
sled = "0.34"

# Search
tantivy = "0.25"

# Metrics
prometheus = "0.14"
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic", "http-proto", "trace"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter", "fmt"] }
tracing-opentelemetry = "0.32"

# HTTP (for JMAP)
axum = "0.8"
hyper = "1.8"
tower = "0.5"
http-body-util = "0.1"

# UUID
uuid = { version = "1.22", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Bytes
bytes = "1.11"

# Password hashing
bcrypt = "0.19"
base64 = "0.22"

# System info
hostname = "0.4"
html2text = "0.17.1"

# Testing
mockall = "0.14"
wiremock = "0.6"
tempfile = "3.27"
proptest = "1.11"
quickcheck = "1.1"
reqwest = { version = "0.13", features = ["json", "form", "rustls", "blocking"], default-features = false }
rand = "0.10"

# ACME / TLS certificate provisioning
instant-acme = { version = "0.8", default-features = false, features = ["ring", "hyper-rustls"] }
rcgen = { version = "0.14", default-features = false, features = ["ring", "pem"] }
pem-rfc7468 = { version = "1.0", features = ["std"] }
rustls-pemfile = "2"

# Async I/O utilities
tokio-util = { version = "0.7", features = ["io"] }

# Cryptography
pbkdf2 = { version = "0.12", features = ["simple"] }
getrandom = "0.4"
sha2 = "0.10"
md-5 = "0.10"
hmac = "0.12"
hex = "0.4"
rsa = { version = "0.9", features = ["sha2"] }
ed25519-dalek = "2.2"
aes-gcm = "0.10"
p256 = { version = "0.13", features = ["ecdsa", "pem"] }
hkdf = "0.12"

# Auth / identity
ldap3 = "0.12"
argon2 = "0.5"
oauth2 = "5.0"
jsonwebtoken = { version = "10.3", features = ["rust_crypto"] }

# Network
ipnetwork = "0.21"
hickory-resolver = { version = "0.25", features = ["tokio"] }

# Async / streaming
futures = "0.3"
async-stream = "0.3"
tokio-test = "0.4"

# Compression / archiving
oxiarc-deflate = { version = "0.3.0", features = ["async-io"] }
oxiarc-zstd = "0.3.0"
oxiarc-archive = "0.3.0"

# CLI
clap_complete = "4.6"
indicatif = "0.18"
colored = "3.1"
interprocess = "2.4"
tabled = "0.20"

# TUI
ratatui = "0.30"
crossterm = "0.29"

# Certificate / X.509
x509-parser = "0.18"

# Cloud
aws-sdk-s3 = "1.127"
aws-config = "1.8"

# Filesystem
walkdir = "2.5"

# Logging
tracing-appender = "0.2"

# Benchmarking
criterion = { version = "0.8", features = ["html_reports", "async_tokio"] }

# Load testing
clap = { version = "4.6", features = ["derive", "env"] }
hdrhistogram = "7.5"

# Concurrency / Locking
fs2 = "0.4.3"
dashmap = "6.1.0"
parking_lot = "0.12.5"

# Cache
lru = "0.18.0"

# CLI / documentation
clap_mangen = "0.3.0"

# Internationalization
idna = "1.1.0"

# Testing
mockito = "1.7.2"
assert_cmd = "2.0"

# AmateRS distributed KV store (C deps via rustls/tonic; keep opt-in via amaters-backend feature)
amaters-sdk-rust = { path = "../amaters/crates/amaters-sdk-rust", version = "0.2.1" }

nix = { version = "0.31.2", features = ["user", "fs"] }

[patch.crates-io]

