[package]
name = "rusmes-config"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Configuration management for RusMES — TOML/YAML auto-detection, 30+ environment variable overrides, validation, and SIGHUP hot-reload"
keywords = ["email", "configuration", "toml", "yaml", "hot-reload"]
categories = ["email", "encoding"]
documentation = "https://docs.rs/rusmes-config"
homepage = "https://github.com/cool-japan/rusmes"
repository = "https://github.com/cool-japan/rusmes"
readme = "README.md"

[dependencies]
rusmes-proto = { path = "../rusmes-proto", version = "0.1.1" }
serde = { workspace = true }
toml = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["json", "env-filter"] }
tracing-appender = { workspace = true }
oxiarc-deflate = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
