[package]
name = "rusmes-smtp"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Async SMTP server for RusMES — RFC 5321 compliant with STARTTLS, AUTH (PLAIN/LOGIN/CRAM-MD5/SCRAM-SHA-256), PIPELINING, DSN, and BDAT/CHUNKING"
keywords = ["smtp", "email", "mail-server", "async", "tls"]
categories = ["email", "network-programming", "asynchronous"]
documentation = "https://docs.rs/rusmes-smtp"
homepage = "https://github.com/cool-japan/rusmes"
repository = "https://github.com/cool-japan/rusmes"
readme = "README.md"

[dependencies]
rusmes-proto = { path = "../rusmes-proto", version = "0.1.2" }
rusmes-core = { path = "../rusmes-core", version = "0.1.2" }
rusmes-auth = { path = "../rusmes-auth", version = "0.1.2" }
rusmes-storage = { path = "../rusmes-storage", version = "0.1.2" }
rusmes-metrics = { path = "../rusmes-metrics", version = "0.1.2" }
rusmes-config = { path = "../rusmes-config", version = "0.1.2" }
tokio = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
nom = { workspace = true }
rustls = { workspace = true }
tokio-rustls = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
ipnetwork = { workspace = true }
hmac = { workspace = true }
md-5 = { workspace = true }
sha2 = { workspace = true }
pbkdf2 = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
getrandom = { workspace = true }
dashmap = { workspace = true }
rustls-pemfile = { workspace = true }
rcgen = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
rusmes-storage = { path = "../rusmes-storage", version = "0.1.2" }
