[package]
name = "rusmes-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Storage abstraction layer for RusMES — trait-based mailbox and message store with filesystem (maildir), PostgreSQL, and AmateRS distributed backends"
keywords = ["email", "storage", "maildir", "postgresql", "mailbox"]
categories = ["email", "network-programming", "asynchronous"]
documentation = "https://docs.rs/rusmes-storage"
homepage = "https://github.com/cool-japan/rusmes"
repository = "https://github.com/cool-japan/rusmes"
readme = "README.md"

[dependencies]
rusmes-proto = { path = "../rusmes-proto", version = "0.1.0" }
tokio = { workspace = true, features = ["fs"] }
async-trait = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
hostname = { workspace = true }
sqlx = { workspace = true, features = ["postgres", "mysql", "sqlite"] }
serde_json = { workspace = true }
chrono = { workspace = true }
bytes = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
